--- a/src/app/cases-details/cases-details.component.html
+++ b/src/app/cases-details/cases-details.component.html
@@ -3,13 +3,11 @@
   <div class="example-loading-shade" *ngIf="isLoadingResults">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
-
   <div class="button-row">
     <a mat-flat-button color="primary" [routerLink]="['/cases']">
-      <mat-icon>List</mat-icon>
+      <mat-icon>list</mat-icon>
     </a>
   </div>
-
   <mat-card class="example-card">
     <mat-card-header>
       <mat-card-title>
@@ -17,33 +15,29 @@
       </mat-card-title>
       <mat-card-subtitle>{{cases.age}} year old</mat-card-subtitle>
     </mat-card-header>
-
     <mat-card-content>
       <dl>
         <dt>Gender:</dt>
         <dd>{{cases.gender}}</dd>
         <dt>Address:</dt>
         <dd>{{cases.address}}</dd>
-        <dt>City</dt>
+        <dt>City:</dt>
         <dd>{{cases.city}}</dd>
-        <dt>Country</dt>
-        <dt>{{cases.country}}</dt>
-        <dd>Status:</dd>
-        <dt>
+        <dt>Country:</dt>
+        <dd>{{cases.country}}</dd>
+        <dt>Status:</dt>
+        <dd>
           <h2>{{cases.status}}</h2>
-        </dt>
+        </dd>
       </dl>
     </mat-card-content>
-
     <mat-card-actions>
       <a mat-flat-button color="primary" [routerLink]="['/edit-cases', cases._id]">
-        <mat-icon>edit</mat-icon>Cases
+        <mat-icon>edit</mat-icon> Cases
       </a>
       <a mat-flat-button color="warn" (click)="deleteCases(cases._id)">
-        <mat-icon>delete</mat-icon>Cases
+        <mat-icon>delete</mat-icon> Cases
       </a>
     </mat-card-actions>
-
   </mat-card>
-
 </div>
